Oracle Database 編作成

--- a/02.その他/01.区切り文字・大文字小文字等の考え方.md
+++ b/02.その他/01.区切り文字・大文字小文字等の考え方.md
@@ -1,4 +1,4 @@
-# 区切り文字や大文字小文字等の考え方
+# 区切り文字・大文字小文字等の考え方
 
 ## 概要
 特にIT業界においては区切り文字や大文字小文字等のルールを決めることで 文書やシステムの品質が上がります。ここでは私が心がけたいルールを記載します。
@@ -9,5 +9,6 @@
 |---|---|---|---|---|
 |ドメイン名|ハイフン|小文字||区切り文字はハイフンのみ|
 |Gitリポジトリ名|アンダーライン|小文字||見栄えを重視する|
-|ファイル名プレフィックス|||0x.ファイル名|見栄えを重視する|
+|ファイル名|（無し）||0x.ファイル名<br>（プレフィックス）|見栄えを重視する|
+|SQL名|アンダーライン|DDL句：大文字<br>SQL句：小文字<br>オブジェクト：大文字||見栄えと区別を重視する|
 
